# gova-backend

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  alembic.ini.example  db-docker-compose.yaml  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: build.yaml  docker.yaml  staging.yaml
backend/: conftest.py  docker-compose.yaml  dockerfile  pyproject.toml
backend/src/: .env.template  config.py  db_models.py  docker-compose.yaml  main.py  rsp.json  test.py
backend/src/core/: enums.py  events.py  models.py
backend/src/engine/: base_action.py  (+9 more)
docker/: dev-compose.yaml  dockerfile  prod-compose.yaml  test-compose.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  openapi.ts
src/: .env.template  config.py  db-docker-compose.yaml  db_models.py  db_models2.py  enums.py  main.py  util.py  utils.py
src/alembic/: env.py
src/api/: app.py  dependencies.py  types.py
src/cli/: main.py
src/core/: enums.py  events.py
src/engine/: background_executor.py  deployment_listener.py  enums.py  event_logger.py  exc.py  models.py  moderator_event_logger.py  prompt_validator.py  task_pool.py
src/engineV2/: enums.py
src/events/: actions.py  base.py  moderator.py
src/infra/: kafka_manager.py
src/runners/: __init__.py  api_runner.py  base_runner.py  event_handler_runner.py  event_logger_runner.py  moderator_orchestrator_runner.py  orchestrator_runner.py  runner_config.py  utils.py
src/server/: app.py  dependencies.py  typing.py
src/utils/: db.py  llm.py
tests/engine/: util.py
tests/routers/: conftest.py
(+237 files in other folders)
