[project]
name = "ai-chat-moderation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiokafka>=0.12.0",
    "alembic>=1.18.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "click>=8.3.0",
    "discord-py>=2.6.4",
    "fastapi>=0.119.0",
    "kafka-python>=2.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "pydantic-ai>=1.43.0",
    "redis>=7.0.0",
    "sqlalchemy>=2.0.45",
    "stripe>=14.1.0",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
